--- a/Rewrite/Advertising/qqmusic.conf
+++ b/Rewrite/Advertising/qqmusic.conf
@@ -35,12 +35,11 @@
 ########################################
 
 # adconfig
-^https?:\/\/.*\/adconfig.*$ url script-response-body https://github.com/yunjin-w/QuantumultX/blob/main/Rewrite/Advertising/empty_json
+^https?:\/\/.*\/adconfig.*$ url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
 # adInfo
-^https?:\/\/.*\/adInfo.*$ url script-response-body https://github.com/yunjin-w/QuantumultX/blob/main/Rewrite/Advertising/empty_json
+^https?:\/\/.*\/adInfo.*$ url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
 # adSwitch
-^https?:\/\/.*\/adSwitch.*$ url script-response-body https://github.com/yunjin-w/QuantumultX/blob/main/Rewrite/Advertising/empty_json
-
+^https?:\/\/.*\/adSwitch.*$ url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
 
 ########################################
 # 5. （可选）防御性拦截，不建议先开
