--- a/Rewrite/Advertising/qqmusic.conf
+++ b/Rewrite/Advertising/qqmusic.conf
@@ -4,6 +4,8 @@
 #!version=2025.01
 #!type=QuantumultX
 
+hostname = y.qq.com, u.y.qq.com, isure.stream.qqmusic.qq.com, aqqmusic.tc.qq.com, c.y.qq.com, dl.stream.qqmusic.qq.com
+
 ########################################
 # 1. 拦截开屏广告（强力但安全）
 ########################################
