--- a/Rewrite/Advertising/qqmusic.conf
+++ b/Rewrite/Advertising/qqmusic.conf
@@ -4,7 +4,17 @@
 #!version=2025.01
 #!type=QuantumultX
 
-hostname = y.qq.com, u.y.qq.com, isure.stream.qqmusic.qq.com, aqqmusic.tc.qq.com, c.y.qq.com, dl.stream.qqmusic.qq.com
+# ==============  MITM 域名  ==============
+hostname = y.qq.com, u.y.qq.com, c.y.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com
+
+# ==============  屏蔽 QQ 音乐开屏广告  ==============
+
+# 开屏广告主接口（最重要）
+^https:\/\/u\.y\.qq\.com\/cgi-bin\/musicu.fcg.*(get_ads|advert|splash) url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
+
+# 额外广告接口
+^https:\/\/c\.y\.qq\.com\/.*(ad|advert).* url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
+^https:\/\/isure\.stream\.qqmusic\.qq\.com\/.*(ad|advert).* url reject-200
 
 ########################################
 # 1. 拦截开屏广告（强力但安全）
