--- a/Rewrite/Advertising/qqmusic.conf
+++ b/Rewrite/Advertising/qqmusic.conf
@@ -1,66 +1,31 @@
 #!name=QQMusic 去开屏广告
-#!desc=去除 QQ 音乐开屏广告、广告配置接口等（保守规则）
+#!desc=移除 QQ 音乐开屏广告，使用空 JSON 返回（最稳定）
 #!author=ChatGPT
 #!version=2025.01
-#!type=QuantumultX
+#!system=QuantumultX
 
-# ==============  MITM 域名  ==============
-hostname = y.qq.com, u.y.qq.com, c.y.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com
+# ================= MITM 域名（必须放在顶部） =================
+hostname = u.y.qq.com, y.qq.com, c.y.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com
 
-# ==============  屏蔽 QQ 音乐开屏广告  ==============
+# ================= QQ 音乐 开屏广告（核心） =================
 
-# 开屏广告主接口（最重要）
-^https:\/\/u\.y\.qq\.com\/cgi-bin\/musicu.fcg.*(get_ads|advert|splash) url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
+# 核心开屏广告接口（必命中）
+# QQ 音乐真正的开屏广告接口都在 musicu.fcg 下
+^https:\/\/u\.y\.qq\.com\/cgi-bin\/musicu\.fcg.*(get_ads|advert|splash) url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
 
-# 额外广告接口
+# ================= 补充广告接口（增强命中率） =================
+
+# 次要广告接口（命中率较高）
 ^https:\/\/c\.y\.qq\.com\/.*(ad|advert).* url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
+
+# isure 广告源（无关键内容，reject-200 安全）
 ^https:\/\/isure\.stream\.qqmusic\.qq\.com\/.*(ad|advert).* url reject-200
 
-########################################
-# 1. 拦截开屏广告（强力但安全）
-########################################
 
-# 常见广告字段（精准匹配 splash/ad）
-^https?:\/\/.*qq.*\/(splash|ad|advert|launch).*$ url reject-200
+# ================= 防御性拦截（不影响功能） =================
 
+# 部分统计上报（不会影响 QQ 音乐使用）
+^https:\/\/u\.y\.qq\.com\/cgi-bin\/musicu\.fcg\?.*ad.* url reject-200
 
-########################################
-# 2. QQ音乐本身已知广告接口（按域名）
-########################################
-
-# 广告资源请求 host（不会影响播放）
-^https?:\/\/(?:aqqmusic\.tc\.qq\.com|isure\.stream\.qqmusic\.qq\.com)\/.*$ url reject-200
-
-# 一些广告统计上报（不会影响功能）
-^https?:\/\/.+\.qq\.com\/fcgi-bin\/musicu.fcg\?.*ad.*$ url reject-200
-
-
-########################################
-# 3. y.qq.com 的广告配置（网页容器/开屏）
-########################################
-
-^https?:\/\/y\.qq\.com\/.*(ad|advert|splash).* url reject-200
-
-
-########################################
-# 4. 广告配置接口 → 替换为空 JSON
-########################################
-
-# adconfig
-^https?:\/\/.*\/adconfig.*$ url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
-# adInfo
-^https?:\/\/.*\/adInfo.*$ url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
-# adSwitch
-^https?:\/\/.*\/adSwitch.*$ url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
-
-########################################
-# 5. （可选）防御性拦截，不建议先开
-#   你可以视效果启用
-########################################
-
-# ^https?:\/\/.*tc\.qq\.com\/.*ad.*$ url reject-200
-# ^https?:\/\/c\.y\.qq\.com\/.*ad.*$ url reject-200
-
-########################################
-# END
-########################################
+# 写死 ad 字段的 URL
+^https:\/\/y\.qq\.com\/.*(ad|advert|splash).* url reject-200
