--- a/Rewrite/Advertising/qqmusic.conf
+++ b/Rewrite/Advertising/qqmusic.conf
@@ -5,14 +5,14 @@
 #!system=QuantumultX
 
 # ================= MITM 域名（必须放在顶部） =================
-hostname = u.y.qq.com, y.qq.com, c.y.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com
+hostname = u.y.qq.com, u6.y.qq.com, y.qq.com, c.y.qq.com, isure.stream.qqmusic.qq.com, dl.stream.qqmusic.qq.com
 
 # ================= QQ 音乐 开屏广告（核心） =================
 
 # 核心开屏广告接口（必命中）
 # QQ 音乐真正的开屏广告接口都在 musicu.fcg 下
 ^https:\/\/u\.y\.qq\.com\/cgi-bin\/musicu\.fcg.*(get_ads|advert|splash) url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
-
+^https:\/\/u[0-9]*\.y\.qq\.com\/cgi-bin\/musicu\.fcg.*(get_ads|advert|splash) url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
 # ================= 补充广告接口（增强命中率） =================
 
 # 次要广告接口（命中率较高）
