--- a/Rewrite/Advertising/qqmusic.conf
+++ b/Rewrite/Advertising/qqmusic.conf
@@ -11,7 +11,7 @@ hostname = u.y.qq.com, u6.y.qq.com, y.qq.com, c.y.qq.com, isure.stream.qqmusic.q
 
 # 核心开屏广告接口（必命中）
 # QQ 音乐真正的开屏广告接口都在 musicu.fcg 下
-^https://u6.y.qq.com/cgi-bin/qqmusic.fcg.* url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
+^https:\/\/u6.y.qq.com/cgi-bin/qqmusic.fcg.* url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
 ^https:\/\/u[0-9]*\.y\.qq\.com\/cgi-bin\/musicu\.fcg.*(?:get_ads|advert|splash) url script-response-body https://raw.githubusercontent.com/yunjin-w/QuantumultX/main/Rewrite/Advertising/empty_json.js
 # ================= 补充广告接口（增强命中率） =================
 # 补充规则：针对c.y.qq.com的开屏广告
